# proliferate

./: .chrome-drive-attach-test.mjs  .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile.example  Cargo.toml  Cross.toml  DESIGN_SPEC.md  LICENSE  Makefile  README.md  READTHIS.md  SECURITY.md  SSH_TARGETS_UI_CONTEXT.md  THIRD_PARTY_NOTICES.md  biome.json  configurations-redesign.diff  dashboard-stall-context-2026-02-19.md  design.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  goals-dev.sh  inspiration.tsx  integrations_architecture.md  justfile  next.config.ts  ngrok.yml.example  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  pr306-issue-comments.json  pr306-review-comments.json  (+8 more)
anyharness/crates/anyharness/: Cargo.toml
anyharness/crates/anyharness-credential-discovery/: Cargo.toml
anyharness/crates/anyharness-lib/: Cargo.toml
anyharness/crates/proliferate-runtime-update-protocol/: Cargo.toml
anyharness/crates/proliferate-supervisor/: Cargo.toml  build.rs
anyharness/crates/proliferate-worker/: Cargo.toml  build.rs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.json
desktop/src-tauri/binaries/: proliferate-debug-aarch64-apple-darwin
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agent_seed_env.rs  app_config.rs  desktop_telemetry_mode.rs  lib.rs  quit_flow.rs  sidecar.rs  telemetry.rs  telemetry_file_logging.rs
server/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial_legacy_schema.py  0f1e2d3c4b5a_agent_gateway_budget_provider_keys.py  15649bf2cf24_dashboards_provider_ingestion_v1.py  1a2b3c4d5e6f_cloud_mcp_oauth_return_surfaces.py  2b3c4d5e6f70_add_decide_plan_cloud_command.py  346d1f5a4151_billing_budget_limits.py  35fa0038d703_merge_action_approvals_and_sandbox_.py  3600456201a0_local_merge_for_integration_run.py  3c4d5e6f7081_password_auth_credentials.py  42530134293a_workspace_move.py  4d5e6f708192_support_report_lifecycle.py  53b86a01da39_merge_workspace_move_and_user_token_.py  5a8fb6df734b_workflow_seed_columns.py  5e6f708192a3_agent_run_config_model_aliases.py  6f545e279264_cloud_sandbox_desired_versions.py  6f708192a3b4_support_report_trackers.py  72f3b6a08911_free_cloud_billing.py  75e8009a52c7_merge_billing_budget_limits_and_org_.py  76c0a297415c_org_agent_policy_native_route_backfill.py  7a8192b3c4d5_worker_control_state.py  7c2ab9f4d0e1_enrollment_budget_status_limit_reached.py  8b9c0d1e2f3a_target_sandbox_identity.py  995b21c04264_baseline_schema.py  9a0b1c2d3e4f_stripe_cloud_billing_foundation.py  9c0d1e2f3a4b_worker_control_revoked_jti_revision.py  9d9e27c9298b_merge_agent_auth_and_self_hosting_.py  a0b1c2d3e4f5_mobility_v2.py  a1b2c3d4e5f6_add_archived_at_to_automation.py  a1b2c3d4e5f6_cloud_workspace_display_name_nullable.py  a1c2e3f4b5d6_organization_instance_marker.py  a1c9e5d7b3f2_workflow_missed_run_policy.py  a2b3c4d5e6f7_cloud_owned_mcp_model.py  a2b3c4d5e6f8_integration_tool_call_events.py  a3f9c7e21b40_grok_agent_kind_and_xai_provider.py  a5b6c7d8e9f0_drop_reintroduced_cloud_workspace_mobility.py  a7b9c1d3e5f7_workflow_run_stopped_by_user.py  a7c3e9f21b04_cloud_sandbox_desired_version.py  a7c8d9e0f1a2_organizations_v1.py  a7e2c4f1b9d0_workflow_run_private_envelope.py  a8b9c0d1e2f3_automation_definitions.py  (+121 more)
server/artifact-runtime/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
server/artifact-runtime/src/: bridge.ts  dispatcher.ts  index.ts  styles.css  types.ts
server/deploy/: .env.production.example  Caddyfile  Caddyfile.byo-cert  README.md  bootstrap.sh  common.sh  docker-compose.byo-cert.yml  docker-compose.production.yml  doctor.sh  ensure-secrets.sh  hosted-redis-contract.json  install-runtime.sh  install.sh  preflight.sh  registry-login.sh  update.sh  wait-for-health.sh
server/deploy/docs/: byo-cert.md
server/deploy/smoke/: docker-compose.smoke.yml  run-smoke.sh  web-smoke.mjs
server/deploy/tests/: bootstrap-markers.sh  health-wait-bounds.sh  public-health-custom-resource.py  run.sh
server/infra/: background.tf  main.tf
server/infra/analytics/: README.md  bootstrap.sql  ecs-taskdef.json  eventbridge-target.json  iam-scheduler-policy.json  iam-task-role-policy.json  metabase-dashboards.md
server/infra/hosted-redis/: README.md  check_adoption_plan.py  imports.tf  main.tf
server/infra/self-hosted-aws/: README.md  launch-stack.sh  template.yaml
server/infra/tests/: background_plane.tftest.hcl
server/litellm/: Dockerfile  config.yaml
server/model-catalog/v1/: catalog.json
server/proliferate/: config.py  config_defaults.py  errors.py  main.py  permissions.py  rls_context.py  workflow_config.py
server/proliferate/analytics/: __init__.py  provider_ingest.py
server/proliferate/auth/: api.py  authorization.py  dependencies.py  identity.py  jwt.py  models.py  oauth.py  passwords.py  pkce.py  profile_api.py  service.py  tokens.py  users.py
server/proliferate/background/: __init__.py  beat_schedule.py  celery_app.py  config.py  correlation.py  enqueue_health.py  relay.py  task_metrics.py
server/proliferate/constants/: __init__.py  agent_catalog.py  agent_gateway.py  ai_magic.py  app.py  auth.py  automations.py  billing.py  cloud.py  cloud_mcp.py  deployment.py  mcp_catalog.py  organizations.py  slack.py  workflows.py
server/proliferate/db/: engine.py  migrations.py  session_ops.py
server/proliferate/integrations/: anonymous_telemetry.py  anthropic.py  customerio.py  desktop_downloads.py  github.py  linear.py  mcp_oauth.py  mcp_remote.py  posthog.py  redis_lock.py  resend.py  sentry.py
server/proliferate/lib/: __init__.py
server/proliferate/middleware/: request_context.py  (+1 more)
server/scripts/: analytics_ingest.py  mint_pro_promo_codes.py  provision_password_auth_user.py
server/tests/: conftest.py  postgres.py  strict_ci_plugin.py
(+11632 files in other folders)
