[workspace]
resolver = "2"
members = ["anyharness/crates/*", "desktop/src-tauri"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/proliferate-ai/proliferate"

[workspace.dependencies]
# HTTP / async
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tower = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAPI / schema
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.47.0", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "release-health", "reqwest", "rustls"] }
sentry-anyhow = "0.47.0"
sentry-tracing = { version = "0.47.0", features = ["logs"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
dirs = "6"
subtle = "2"
nucleo-matcher = "0.3.1"

# ACP SDK
agent-client-protocol = { version = "0.10.2", features = ["unstable"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# PTY
portable-pty = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Tauri
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"

# Desktop-only
rfd = "0.15"
keyring = "3"
which = "7"
window-vibrancy = "0.6"

# Internal crates
anyharness-contract = { path = "anyharness/crates/anyharness-contract" }
anyharness-credential-discovery = { path = "anyharness/crates/anyharness-credential-discovery" }
anyharness-lib = { path = "anyharness/crates/anyharness-lib" }
