[project]
name = "proliferate-server"
version = "0.1.0"
description = "Proliferate control plane API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.18.5",
    "fastapi-users[sqlalchemy,oauth]>=15.0.5",
    "httpx-oauth>=0.17.0",
    "httpx>=0.28.0",
    "websockets>=15.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=49.0.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.32",
    "python-dateutil>=2.9.0",
    "e2b>=2.30.0",
    "sentry-sdk[fastapi]>=2.62.0",
    "boto3>=1.43.38",
    "botocore[crt]>=1.43.30",
    "celery>=5.5.0",
    "celery-redbeat>=2.3.0",
    "kombu>=5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.0",
    "mypy>=1.20.2",
    "ruff>=0.15.20",
    "sqlalchemy[mypy]>=2.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "I001"]
# integrations/ wraps untyped third-party SDKs; Any is the only honest annotation
"proliferate/integrations/**" = ["ANN401"]
# runtime/ operates on untyped E2B sandbox objects
"proliferate/server/cloud/runtime/**" = ["ANN401"]
# utils/ contains generic helpers where Any is unavoidable at public boundaries
"proliferate/utils/**" = ["ANN401"]
# Inline HTML/SVG page renderers contain long literal lines.
"proliferate/auth/desktop/pages.py" = ["E501"]
"proliferate/utils/redirect_callback_pages.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_explicit = true

[[tool.mypy.overrides]]
# integrations/ wraps untyped third-party SDKs (e2b, sentry) where
# Any is the only honest annotation at the adapter boundary. Sentry uses
# conditional imports that produce assignment/misc errors due to optional deps.
module = ["proliferate.integrations.*"]
disallow_any_explicit = false
warn_return_any = false
ignore_errors = true

[[tool.mypy.overrides]]
# cloud/runtime operates on untyped E2B sandbox objects; utils contains generic
# helpers (JSON crypto, telemetry scrubbing, time) where Any is unavoidable.
module = [
    "proliferate.server.cloud.runtime.*",
    "proliferate.utils.*",
]
disallow_any_explicit = false
warn_return_any = false

[[tool.mypy.overrides]]
# Pydantic plugin false positives: class-level Any in BaseModel subclasses is
# injected by the Pydantic mypy plugin, not real Any usage in the source code.
module = [
    "proliferate.server.billing.models",
    "proliferate.server.health",
    "proliferate.auth.models",
    "proliferate.auth.desktop.models",
    "proliferate.server.cloud.backfill.models",
    "proliferate.server.cloud.commands.models",
    "proliferate.server.cloud.compute.models",
    "proliferate.server.cloud.mcp_catalog.models",
    "proliferate.server.cloud.mcp_connections.models",
    "proliferate.server.cloud.mcp_oauth.models",
    "proliferate.server.cloud.plugins.catalog.models",
    "proliferate.server.cloud.targets.models",
    "proliferate.server.cloud.target_config.models",
    "proliferate.server.cloud.target_git_identity.models",
    "proliferate.server.cloud.worker.models",
    "proliferate.server.cloud.workspaces.models",
    "proliferate.server.catalogs.models",
    "proliferate.server.cloud.events.models",
    "proliferate.server.cloud.live.models",
    "proliferate.server.cloud.managed_sandboxes.models",
    "proliferate.server.cloud.repos.models",
    "proliferate.server.support.models",
    "proliferate.config",
]
disallow_any_explicit = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "cloud_e2e: live cloud lifecycle tests that require real provider credentials",
    "e2b: tests specific to the E2B provider",
    "live_webhook: tests that require a real externally reachable E2B webhook target",
    "live_bifrost: tests that require a live Bifrost deployment and provider credentials",
]

[tool.hatch.build.targets.wheel]
packages = ["proliferate"]
artifacts = ["proliferate/server/artifact_runtime/static/**"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
