[package]
name = "proliferate"
version = "0.1.14"
edition.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
anyharness-credential-discovery.workspace = true
tauri-plugin-store.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-os.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-deep-link.workspace = true
tauri-plugin-single-instance = { workspace = true, features = ["deep-link"] }
tauri-plugin-updater.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-dialog.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
sha2.workspace = true
url.workspace = true
sentry.workspace = true
sentry-tracing.workspace = true
rfd.workspace = true
keyring.workspace = true
base64 = "0.22"
getrandom = "0.2"
which = "7"
window-vibrancy = "0.6"
uuid.workspace = true
