[package]
name = "proliferate"
version = "0.1.28"
edition.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
anyharness-credential-discovery.workspace = true
tauri-plugin-store.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-os.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-deep-link.workspace = true
tauri-plugin-single-instance = { workspace = true, features = ["deep-link"] }
tauri-plugin-updater.workspace = true
tauri-plugin-process.workspace = true
tauri-plugin-dialog.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
file-rotate.workspace = true
chrono.workspace = true
sha2.workspace = true
url.workspace = true
regex.workspace = true
zip.workspace = true
sentry.workspace = true
sentry-tracing.workspace = true
rfd.workspace = true
keyring.workspace = true
base64 = "0.22"
getrandom = "0.2"
which = "7"
window-vibrancy = "0.6"
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
  "NSApplication",
  "NSMenu",
  "NSMenuItem",
  "NSView",
  "NSWindow",
] }
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }
