[package]
name = "anyharness-credential-discovery"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared Claude/Codex local credential discovery and portable export"

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
uuid.workspace = true
