[package]
name = "proliferate-supervisor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Supervisor for AnyHarness and Proliferate Worker"

[[bin]]
name = "proliferate-supervisor"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
